--- a/grievance-service/pom.xml
+++ b/grievance-service/pom.xml
@@ -43,11 +43,11 @@
 			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
+		-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
