--- a/notification-service/src/main/resources/application-local.properties
+++ b/notification-service/src/main/resources/application-local.properties
@@ -3,3 +3,4 @@ spring.config.import=optional:configserver:http://localhost:8888
 spring.kafka.bootstrap-servers=localhost:9092
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
