--- a/pom.xml
+++ b/pom.xml
@@ -18,20 +18,30 @@
     <properties>
         <java.version>21</java.version>
 
-        <spring.boot.version>3.4.2</spring.boot.version>
-        <spring.cloud.version>2024.0.0</spring.cloud.version>
-
-        <resilience4j.version>2.2.0</resilience4j.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <sonar.organization>yati-21</sonar.organization> 
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
     
-	    <sonar.coverage.jacoco.xmlReportPaths>
-	        ${project.basedir}/target/site/jacoco/jacoco.xml
-	    </sonar.coverage.jacoco.xmlReportPaths>
+	    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.exclusions>
+            */dto/*,
+            */model/*,
+            */config/*,
+            */entity/*,
+            **/*Application.java
+        </sonar.exclusions>
+        <sonar.coverage.exclusions>
+            api-gateway/**,
+            notification-service/**,
+            service-registry/**,
+            config-server/**
+        </sonar.coverage.exclusions>
     </properties>
 
-    <dependencyManagement>
+    <!-- <dependencyManagement>
         <dependencies>
 
             <dependency>
@@ -51,17 +61,17 @@
             </dependency>
 
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement> -->
 
     <modules>
-        <module>api-gateway</module>
         <module>config-server</module>
+        <module>service-registry</module>
         <module>user-service</module>
         <module>grievance-service</module>
         <module>feedback-service</module>
         <module>notification-service</module>
         <module>reporting-service</module>
-        <module>service-registry</module>
+        <module>api-gateway</module>
     </modules>
 
     <build>
@@ -74,12 +84,13 @@
                     <version>3.10.0.2594</version>
                 </plugin>
 
+<!--
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.version}</version>
                 </plugin>
-
+-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -90,6 +101,11 @@
                     </configuration>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.10.0.2594</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
