--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			  <groupId>org.springframework.security</groupId>
+			  <artifactId>spring-security-crypto</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
