--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -5,7 +5,7 @@ version: "3.8"
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.1
-    container_name: zookeeper
+    container_name: zookeeper_local
     ports:
       - "2181:2181"
     environment:
@@ -14,7 +14,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.2.1
-    container_name: kafka
+    container_name: kafka_local
     depends_on:
       - zookeeper
     ports:
