--- a/pom.xml
+++ b/pom.xml
@@ -17,52 +17,20 @@
 
     <properties>
         <java.version>21</java.version>
-
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <sonar.organization>yati-21</sonar.organization> 
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    
+
 	    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.exclusions>
-            */dto/*,
-            */model/*,
-            */config/*,
-            */entity/*,
-            **/*Application.java
+            */dto/*,*/model/*,*/config/*,*/entity/*,**/*Application.java
         </sonar.exclusions>
         <sonar.coverage.exclusions>
-            api-gateway/**,
-            notification-service/**,
-            service-registry/**,
-            config-server/**
+            api-gateway/**,notification-service/**,service-registry/**,config-server/**
         </sonar.coverage.exclusions>
     </properties>
-
-    <!-- <dependencyManagement>
-        <dependencies>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement> -->
-
     <modules>
         <module>config-server</module>
         <module>service-registry</module>
@@ -77,20 +45,11 @@
     <build>
         <pluginManagement>
             <plugins>
-
                 <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
                     <version>3.10.0.2594</version>
                 </plugin>
-
-<!--
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring.boot.version}</version>
-                </plugin>
--->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -100,7 +59,6 @@
                         <target>${java.version}</target>
                     </configuration>
                 </plugin>
-
                 <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
