--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.cloud.config.server.git.password=${GIT_PASSWORD}
 spring.cloud.config.server.git.default-label=main
 spring.cloud.config.server.git.clone-on-start=true
 
-spring.cloud.config.server.encrypt.enabled=true
-encrypt.key=egov-config-secret-key-256bit
+spring.cloud.config.server.encrypt.enabled=false
+# encrypt.key=egov-config-secret-key-256bit
 
 eureka.client.enabled=false
 management.endpoints.web.exposure.include=health
